# tinyrick_extras

./: .rubberstamp  Cargo.toml  DEVELOPMENT.md  README.md  install  install.mk  makefile  rick.rs  tinyrick.rs
.github/workflows/: audit.yml  lint.yml  rubberstamp.yml  test-futureproof-dependencies.yml  test-futureproof-language.yml  test-futureproof-os.yml  test.yml
example/: Cargo.toml  DEVELOPMENT.md  README.md  crosscompile-linux.sh  rick.rs  tinyrick.rs
example/src/lib/: fizzy.rs
src/: lib.rs
src/lib/: tinyrick_extras.rs
