[package]

name = "tinyrick_extras"
description = "common tasks for tinyrick projects"
version = "0.0.8"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"
homepage = "https://github.com/mcandre/tinyrick_extras"
documentation = "https://docs.rs/releases/search?query=tinyrick_extras"

[dependencies]
tinyrick = "0.0.14"

[features]
letmeout = []

[lib]
name = "tinyrick_extras"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
