[package]
name = "tinyrick_extras"
description = "common tasks for tinyrick projects"
version = "0.0.13"
edition = "2024"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/mcandre/tinyrick_extras"
documentation = "https://docs.rs/releases/search?query=tinyrick_extras"

[dependencies]
tinyrick = "0.0.19"

[features]
letmeout = []

[lib]
name = "tinyrick_extras"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
