[package]
name = "tinyrick_extras"
description = "common tasks for tinyrick projects"
version = "0.0.19"
edition = "2024"
authors = ["Andrew Pennebaker <n4jm4@pm.me>"]
license = "BSD-2-Clause"
repository = "https://github.com/mcandre/tinyrick_extras"
documentation = "https://docs.rs/releases/search?query=tinyrick_extras"

[dependencies]
ctor = { version = "0.6.2", optional = true }
die = "0.2.0"
tinyrick = "0.0.24"
tinyrick_macros = { version = "0.0.3", optional = true }
tinyrick_models = { version = "0.0.2", optional = true }

[features]
letmeout = [
    "ctor",
    "tinyrick_macros",
    "tinyrick_models",
]

[lib]
name = "tinyrick_extras"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
