[package]

name = "fizzy"
description = "intergalactic sanctioned drinking game"
version = "0.0.1"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"

[dependencies]
tinyrick = "0.0.8"
tinyrick_extras = { version = "*", path = "..", optional = true }

[features]
letmeout = ["tinyrick_extras"]

[lib]
path = "src/lib/fizzy.rs"

[[bin]]
name = "fizzbuzz"
path = "src/bin/fizzbuzz.rs"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
