[package]
name = "fizzy"
description = "intergalactic sanctioned drinking game"
version = "0.0.1"
edition = "2024"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"

[dependencies]
tinyrick = { version = "0.0.17", optional = true }
tinyrick_extras = { version = "*", path = "..", optional = true }

[features]
letmeout = ["tinyrick", "tinyrick_extras"]

[lib]
path = "src/lib/fizzy.rs"

[[bin]]
name = "fizzbuzz"
path = "src/bin/fizzbuzz.rs"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
