[package]
name = "fizzy"
description = "intergalactic sanctioned drinking game"
version = "0.0.1"
edition = "2024"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"

[dependencies]
ctor = { version = "0.6.2", optional = true }
die = { version = "0.2.0", optional = true }
tinyrick = { version = "0.0.21", optional = true }
tinyrick_extras = { version = "0.0.14", optional = true }
tinyrick_macros = { version = "0.0.3", optional = true }
tinyrick_models = { version = "0.0.2", optional = true }

[features]
letmeout = [
    "ctor",
    "die",
    "tinyrick",
    "tinyrick_extras",
    "tinyrick_macros",
    "tinyrick_models",
]

[lib]
path = "src/lib/fizzy.rs"

[[bin]]
name = "fizzbuzz"
path = "src/bin/fizzbuzz.rs"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
